add drizzle ORM & db schema

--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "test": "vitest run",
     "format": "biome format",
     "lint": "biome lint",
-    "check": "biome check"
+    "check": "biome check",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
-    "@neondatabase/serverless": "^1.0.0",
+    "@neondatabase/serverless": "^1.0.2",
     "@neondatabase/vite-plugin-postgres": "^0.2.0",
     "@netlify/vite-plugin-tanstack-start": "^1.0.2",
     "@orpc/client": "^1.7.5",
@@ -43,6 +47,8 @@
     "@tanstack/store": "^0.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.6",
     "lucide-react": "^0.544.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -61,7 +67,9 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^5.0.4",
+    "drizzle-kit": "^0.31.5",
     "jsdom": "^27.0.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
