--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^5.0.4",
+    "babel-plugin-react-compiler": "^1.0.0",
     "drizzle-kit": "^0.31.5",
     "jsdom": "^27.0.0",
     "tsx": "^4.20.6",
@@ -109,5 +110,9 @@
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0"
-  }
+  },
+  "trustedDependencies": [
+    "@parcel/watcher",
+    "@tailwindcss/oxide"
+  ]
 }
